--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "source": "https://github.com/MolajoPlugins/Customfields"
     },
     "require": {
-        "molajo/plugins": "dev-master"
+        "php": ">=5.4"
     },
     "autoload": {
         "psr-4": {
